--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "react-scripts": "5.0.1"
   },
   "dependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react": "19",
+    "react-dom": "19"
   },
   "scripts": {
     "start": "react-scripts start",
