--- a/.github/workflows/update-polls.yml
+++ b/.github/workflows/update-polls.yml
@@ -30,13 +30,16 @@ jobs:
         with:
           node-version: '20'
 
+      - name: Enable Corepack
+        run: corepack enable
+
       - name: Install importer dependencies
         working-directory: tools/importer
-        run: npm install
+        run: yarn install --frozen-lockfile
 
       - name: Run poll importer
         working-directory: tools/importer
-        run: npm run import
+        run: yarn run import
 
       - name: Check for changes
         id: git-check
